pwiz/utility/bindings/CLI/timstof_prm_scheduler/prmscheduler.h

    
    typedef struct {
        double mobility_gap;
        double frame_rate;
        double one_over_k0_lower_limit;
        double one_over_k0_upper_limit;
    } PrmMethodInfo;
    typedef struct {
        bool default_pasef_collision_energies;
        double ms1_repetition_time;
    } PrmAdditionalMeasurementParameters;
    typedef struct {
        bool do_collision_energy_ramping;
        double min_collision_energy;
        double max_collision_energy;
        uint32_t number_of_steps;
        double time_per_step;
    } PrmCollisionEnergyRamp;
    typedef struct {
        double accumulation_time;
    } PrmMeasurementMode;
    typedef struct {
        double time_in_seconds_begin;
        double time_in_seconds_end;
    } PrmTimeSegments;
    typedef struct {
        double isolation_mz;
        double isolation_width;
        double one_over_k0_lower_limit;
        double one_over_k0_upper_limit;
        double time_in_seconds_begin;
        double time_in_seconds_end;
        double collision_energy;
        double one_over_k0;
        double monoisotopic_mz;
        double time_in_seconds;
        int32_t charge;
    } PrmInputTarget;
    typedef struct {
        uint32_t frame_id;
        uint32_t target_id;
        uint32_t time_segment_id;
        uint32_t measurement_mode_id;
    } PrmPasefSchedulingEntry;
    typedef struct {
        double x; 
        double y; 
    } PrmVisualizationDataPoint;
    typedef struct {
        uint32_t target_id;
        double intensity_threshold;
        double reference_time_in_seconds;
    } PrmRetentionTimeStandard;
    typedef struct {
        uint32_t retention_time_standard_id;
        double mz;
        double relative_intensity_percentage;
    } PrmRetentionTimeStandardFragment;
    BdalPRMSchedulerDllSpec uint64_t prm_scheduling_file_open(
        const char *scheduling_file_name
    );
    BdalPRMSchedulerDllSpec void prm_scheduling_file_close(
        uint64_t handle
    );
    BdalPRMSchedulerDllSpec uint32_t prm_scheduling_get_last_error_string(
        char *buf, 
        uint32_t actual_buffer_size
    );
    typedef void(prm_method_info_function)(
        const PrmMethodInfo *prm_method_info, 
        void *user_data 
        );
    BdalPRMSchedulerDllSpec uint32_t prm_scheduling_get_method_info(
        uint64_t handle,
        prm_method_info_function *callback, 
        void *user_data 
    );
    BdalPRMSchedulerDllSpec uint32_t prm_scheduling_set_additional_measurement_parameters(
        uint64_t handle,
        PrmAdditionalMeasurementParameters *parameters 
    );
    BdalPRMSchedulerDllSpec uint32_t prm_scheduling_set_collision_energy_ramp_parameters(
        uint64_t handle,
        PrmCollisionEnergyRamp *parameters 
    );
    BdalPRMSchedulerDllSpec uint32_t prm_add_input_target(
        uint64_t handle,
        const PrmInputTarget* prm_input_target,
        const char* external_id,
        const char* description
    );
    BdalPRMSchedulerDllSpec uint32_t prm_add_measurement_mode(
        uint64_t handle,
        const PrmMeasurementMode* prm_measurement_mode,
        const char* external_id
    );
    typedef bool(prm_progress_cancel_function)(
        double progress_percentage,
        void *user_data_progress 
        );
    BdalPRMSchedulerDllSpec uint32_t prm_scheduling_prm_targets(
        uint64_t handle,
        prm_progress_cancel_function *callback_progress_cancel,
        void *user_data_progress 
    );
    typedef void(prm_pasef_scheduling_entry_function)(
        uint32_t num_entries, 
        const PrmPasefSchedulingEntry *prm_pasef_scheduling_entries, 
        void *user_data 
        );
    BdalPRMSchedulerDllSpec uint32_t prm_get_num_scheduling_entries(
        uint64_t handle
    );
    typedef void(prm_time_segments_function)(
        uint32_t num_entries, 
        const PrmTimeSegments *prm_time_segments, 
        void *user_data 
        );
    BdalPRMSchedulerDllSpec uint32_t prm_get_num_time_segments(
        uint64_t handle
    );
    BdalPRMSchedulerDllSpec uint32_t prm_get_scheduling(
        uint64_t handle,
        prm_pasef_scheduling_entry_function *callback_scheduling_entries,
        prm_time_segments_function *callback_time_segments,
        void *user_data_scheduling_entry, 
        void *user_data_time_segments_entry 
    );
    BdalPRMSchedulerDllSpec uint32_t prm_write_scheduling(
        uint64_t handle
    );
    BdalPRMSchedulerDllSpec uint32_t prm_calculate_visualization(
        uint64_t handle,
        uint32_t pasef_scheduling_metric 
    );
    typedef void(prm_visualization_points_function)(
        uint32_t num_entries, 
        const PrmVisualizationDataPoint *data_points, 
        void *user_data 
        );
    BdalPRMSchedulerDllSpec uint32_t prm_get_visualization(
        uint64_t handle,
        prm_visualization_points_function *callback_visualization_points,
        void *user_data_visualization_points 
    );
    BdalPRMSchedulerDllSpec uint32_t prm_add_retention_time_standard(
        uint64_t handle,
        const PrmRetentionTimeStandard *retention_time_standard
    );
    BdalPRMSchedulerDllSpec uint32_t prm_add_retention_time_standard_fragment(
        uint64_t handle,
        const PrmRetentionTimeStandardFragment *retention_time_standard_fragment
    );